Update TVPlayerManager.java